main: Enable JSON output
Closes: #2
Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@opinsys.com>

--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,7 @@ extra_cflags += '-DCONFIG_DISCOVERY=' + discovery
 
 deps = [
   dependency('argtable2'),
+  dependency('libcjson'),
 ]
 
 exe = executable(
