json: implement a custom builder
Implement a custom builder for JSON graph in order to drop libcjson dep.

The renderer does not have any visual representation capapbilities i.e., it
simply emits one huge string. It's easy enough to tweak that with widely
available tools such as jq.

In addition, refresh the dependency list in README.md because it is
completely out of sync.

Signed-off-by: Jarkko Sakkinen <jarkko.sakkinen@opinsys.com>

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,7 @@ sources = [
   'radix.c',
   'strbuf.c',
   'sysfs.c',
+  'iommu/json.c',
   'iommu/main.c',
 ]
 
@@ -45,7 +46,6 @@ extra_cflags += '-DCONFIG_DISCOVERY=' + discovery
 
 deps = [
   dependency('argtable2'),
-  dependency('libcjson'),
 ]
 
 exe = executable(
@@ -57,6 +57,3 @@ exe = executable(
 )
 
 install_man('lsiommu.1')
-
-test('basic test', exe)
-test('help test', exe, args: ['--help'])
